2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c
	* data/transitions.ini:
	  Read ZOOM_EFFECT_DURATION and FLY_EFFECT_DURATION from
	  transitions.ini.  Once.  At startup.

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (hd_task_navigator_zoom_out):
	  Hide the prison at the end if the application had a notification.

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (on_notification_timeline_new_frame):
	  Fly to the right of the tasks button rather than covering it.

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120368 Notification displayed top of touch screen unlocking view

	* src/home/hd-render-manager.c (hd_render_manager_set_visibilities):
	  Hide/show the front group together with blur_front when we sense
	  fullscreens or not.  This is to hide the notification previews
	  which sit in the front group.

2009-06-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_dump_debug_info):
	  Print information about HildonWindowStack:s.

2009-06-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#119560 Hiding a window affects the visibility of
	other transient windows

	* src/mb/hd-comp-mgr.c: If we are leaving app mode, and there are
	modal blockers, don't go to the switcher.  Go to the desktop,
	instead.

2009-06-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-util.c (hd_util_modal_blocker_realize): Add argument for
	saying that only ping is desired, not delete event.
	* src/mb/hd-note.c: Create modal blocker for confirmation notes, too,
	but do not delete them, just ping them to detect a jammed application.
	Fixes: NB#112165

2009-06-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120157 - applets on the deactivated home are some times
	appearing on the present active home for a small instance of time.

	* src/home/hd-home-view.c (close_applet): Hide clutter actor when